# Yuanio

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_REVIEW_BY_SEVERITY.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  FINAL_VERIFICATION_REPORT.md  README.md  REVIEW_FIX_REPORT.md  REVIEW_FIX_VERIFICATION.md  STRUCTURED_CODE_REVIEW.md  STRUCTURED_CODE_REVIEW_BY_SEVERITY.md  STRUCTURED_CODE_REVIEW_FINAL.md  THIRD_PARTY.md  VERIFICATION_REPORT.md  chat-demo.html  chat-refactor.txt  chat_full.html  chat_interaction_demo.html  package.json  talk1.txt  talk2.txt  unlock-demo.html  诊断.md
.githooks/: README.md  pre-commit
android-app/: build.gradle.kts  gradle.properties  gradlew-utf8.ps1  lint.xml  settings.gradle.kts
crates/relay-server/: Cargo.toml
crates/relay-server/src/: auth.rs  config.rs  db.rs  main.rs  pairing.rs  ws.rs
docs/: 6.md  agent-file-change-interface-plan.md  android-i18n-migration-solution.md  android-icons.md  architecture.md  chat-streaming-e2e-checklist.md  competitive-analysis.md  deploy-cloudflare-tunnel.md  desktop-ops.md  diff-panel-round1.md  environment-variables.md  export-shortcut-plan.md  fdroid-release.md  latency-agent-e2e-round1.md  latency-agent-e2e.claude.file-diff.round2.json  latency-agent-e2e.claude.file-diff.round2.md  latency-agent-e2e.claude.round1.median.json  latency-agent-e2e.claude.round1.median.md  latency-agent-e2e.claude.round1.run1.json  latency-agent-e2e.claude.round1.run1.md  latency-agent-e2e.claude.round1.run2.json  latency-agent-e2e.claude.round1.run2.md  latency-agent-e2e.claude.smoke.json  (+130 more)
(+701 files in other folders)
