[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
rand = "0.8"
relay-protocol = { path = "../relay-protocol" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wyhash-final4 = "0.2.2"
